new issues fixing -- while this code was working fine in 2020, during testing in Sep 2023 it was observed that following new runtime errors were happening
fixed below new issues

while this code was working fine in 2020, during testing in Sep 2023 it was observed that following new runtime errors were happening,
 -- TaskDefinition creation was failing indicating attribute names needed Capitalisation i.e. writing of a word with its first letter in uppercase and the remaining letters in lowercase -- so fixed that issue
 -- ApplicationLoadBalancer creation was not waiting for completion of Internet Gateway's creation and it's subsequent attachment to VPC -- this was resulting in error and was failing ApplicationLoadBalancer's creation -- so added ApplicationLoadBalancer's "dependency" on Internet Gateway's attachment to VPC

--- a/sample-node-microservice-iac/cf_templates/cloudformation-stack.yaml
+++ b/sample-node-microservice-iac/cf_templates/cloudformation-stack.yaml
@@ -141,6 +141,8 @@ Resources:
         - !Ref PublicSubnetOne
         - !Ref PublicSubnetTwo
       Type: "application"
+    DependsOn:
+      - GatewayAttachement
   TargetGroup1:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties: 
@@ -188,27 +190,27 @@ Resources:
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
-      family: sample-node-microservice-task-definition
-      cpu: '256'
-      memory: '512'
-      networkMode: awsvpc
-      requiresCompatibilities:
+      Family: sample-node-microservice-task-definition
+      Cpu: '256'
+      Memory: '512'
+      NetworkMode: awsvpc
+      RequiresCompatibilities:
       - FARGATE
-      executionRoleArn: !Ref ECSServiceRole
-      taskRoleArn: !Ref ECSTaskRole
-      containerDefinitions:
-      - name: sample-node-microservice-ecs-service-container
-        image: "488314167089.dkr.ecr.ap-south-1.amazonaws.com/sample-node-microservice/service:latest"
-        portMappings:
-        - containerPort: 3000
-          protocol: http
-        logConfiguration:
-          logDriver: awslogs
-          options:
+      ExecutionRoleArn: !Ref ECSServiceRole
+      TaskRoleArn: !Ref ECSTaskRole
+      ContainerDefinitions:
+      - Name: sample-node-microservice-ecs-service-container
+        Image: "488314167089.dkr.ecr.ap-south-1.amazonaws.com/sample-node-microservice/service:latest"
+        PortMappings:
+        - ContainerPort: 3000
+          Protocol: http
+        LogConfiguration:
+          LogDriver: awslogs
+          Options:
             awslogs-group: sample-node-microservice-log-group
             awslogs-region: ap-south-1
             awslogs-stream-prefix: sample-node-microservice-log-stream
-        essential: true
+        Essential: true
   ECSService:
     Type: AWS::ECS::Service
     DependsOn:
